--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
 
     <script type="text/javascript" src="scripts/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="scripts/gallery.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class=nav-bar>
+      <div class="nav-bar">
 
         <div class="centered-container">
 
@@ -37,7 +37,7 @@
 
           <nav class="nav-column-navigation">
             <ul class="nav">
-              <li><a href="index.html">INDEX</a></li>
+              <li><a href="index.html">HOME</a></li>
               <li><a href="products.html">PRODUCTS</a></li>
               <li><a href="gallery.html">GALLERY</a></li>
               <li><a href="aboutus.html">ABOUT US</a></li>
@@ -48,14 +48,21 @@
       </div>
 
       <section id="main-container" class="centered-container">
+        <ul class="breadcrumb">
+          <li><a href="index.html">BOOK VALUE</a></li>
+          <li>Products</li>
+        </ul>
         <main id="aboutus-main-container">
           <span id="know-about-us">
-            GET TO KNOW A LITTLE MORE ABOUT UT
+            GET TO KNOW A LITTLE MORE ABOUT US
           </span>
-          <p style="float:left;">
-            Lorem ipsum dolor sit amet, eruditi conclusionemque per cu, usu cu suas putant persequeris. Saepe facilisis signiferumque vim cu. Eu eos duis everti, ne diam molestie mea. Mea scaevola moderatius cu, alii moderatius eos cu.
-          </p>
-          <img src="pictures/aboutus/aboutus.png" class="" id="" style="" alt="">
+          <div style="width: 75%; margin: 0 auto; display: table; min-width: 500px;">
+
+              <p style="float:left;">
+                  Lorem ipsum dolor sit amet, eruditi conclusionemque per cu, usu cu suas putant persequeris. Saepe facilisis signiferumque vim cu. Eu eos duis everti, ne diam molestie mea. Mea scaevola moderatius cu, alii moderatius eos cu.
+              </p>
+              <img src="pictures/aboutus/aboutus.png" style="width: 45%;" alt="image description">
+          </div>
         </main>
       </section>
 
