--- a/gallery.html
+++ b/gallery.html
@@ -2,14 +2,15 @@
 <html lang=en>
 
 <head>
-    <meta charset=utf-8>
-    <title>Welcome to Book Value</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+  <meta charset=utf-8>
+  <title>Welcome to Book Value</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
 
-    <script type="text/javascript" src="scripts/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="scripts/gallery.js"></script>
+  <script type="text/javascript" src="scripts/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/gallery.js"></script>
 </head>
 
 <body>
@@ -39,7 +40,7 @@
 
         <nav class="nav-column-navigation">
           <ul class="nav">
-            <li><a href="index.html">INDEX</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="products.html">PRODUCTS</a></li>
             <li><a href="gallery.html">GALLERY</a></li>
             <li><a href="aboutus.html">ABOUT US</a></li>
@@ -50,20 +51,24 @@
     </div>
 
     <section id="main-container" class="centered-container">
+      <ul class="breadcrumb">
+        <li><a href="index.html">BOOK VALUE</a></li>
+        <li>Gallery</li>
+      </ul>
       <main id="gallery-main-container">
-        <img src="pictures/gallery-pics/image-01.jpg" class="gallery-current-image" id="gallery-current-image" style="float:none;" alt="">
+        <img src="pictures/gallery-pics/image-01.jpg" class="gallery-current-image" id="gallery-current-image" style="float:none;" alt="image description">
         <div id="gallery-description">
           <p>
             Check-out our stores!
           </p>
         </div>
         <div id="gallery-thumbnails-container">
-          <img src="pictures/gallery-pics/image-01.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="">
-          <img src="pictures/gallery-pics/image-02.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="">
-          <img src="pictures/gallery-pics/image-03.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="">
-          <img src="pictures/gallery-pics/image-04.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="">
-          <img src="pictures/gallery-pics/image-05.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="">
-          <img src="pictures/gallery-pics/image-06.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="">
+          <img src="pictures/gallery-pics/image-01.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="image description">
+          <img src="pictures/gallery-pics/image-02.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="image description">
+          <img src="pictures/gallery-pics/image-03.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="image description">
+          <img src="pictures/gallery-pics/image-04.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="image description">
+          <img src="pictures/gallery-pics/image-05.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="image description">
+          <img src="pictures/gallery-pics/image-06.jpg" style="width:100px; height: 100px;" class="gallery-thumbnails" alt="image description">
         </div>
       </main>
     </section>
