Google Maps on About Us

--- a/aboutus.html
+++ b/aboutus.html
@@ -64,6 +64,9 @@
               <img src="pictures/aboutus/aboutus.png" style="width: 45%;" alt="image description">
           </div>
         </main>
+        <div id="map-container" class="centered-container">
+            <iframe id="map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.8243403326537!2d-6.261558984388106!3d53.34640057997906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e84c6861191%3A0xb7f01c9c24223eaa!2sBook+Value!5e0!3m2!1sen!2sie!4v1489868848634"  allowfullscreen></iframe>
+        </div>
       </section>
 
       <footer id="footer">
